
* marks an incompatible change

library
  * renamed array.ArraySorted -> array.IntArraySorted
    array.ArraySorted is now generic, with type and order relation parameters

provers
  * fixed Coq printer (former Coq proofs may have to be updated, by removing
    non-emptiness constraints from polymorphic type applications)

version 0.83, March 14, 2014
============================

syntax
  o extra semicolons are now allowed at end of blocks
  o new clause "diverges". Loops and recursive calls not annotated
    with variants will generate a warning, unless the "diverges"
    clause is given
  o clauses "reads" and "writes" now accept an empty set
  * modified syntax for "abstract": abstract <spec> <expr> end
  o types in quantifiers are now optional
  o formulas and Boolean terms can be used interchangeably

library
  * removed inconsistency in libraries map.MapPermut and array.ArrayPermut
    (names, definitions, and meaning of symbols "permut..." have been modified)

provers
  o new version of prover: Coq 8.4pl3
  o new version of prover: Gappa 1.1.0
  o new version of prover: E prover 1.8
  * Coq 8.3 is no longer supported
  o improved support for Isabelle2013-2
  * fixed Coq printer (former Coq proofs may have to be updated, with
    extra qualification of imported symbols)

tools
  o new option --exec to interpret WhyML programs; see doc chapter 8
  o new option --extract to compile WhyML programs to OCaml;
    see doc chapter 8 and modules/mach/{int,array}.mlw
  * [why3replayer] renamed option -obsolete-only to --obsolete-only,
    -smoke-detector to --smoke-detector, -force to --force
  * [why3replayer] replay now fails if new goals are added

API
  o new type-inferring API for logical terms and program expressions

miscellaneous
  o fixed compilation bug with lablgtk 2.18

version 0.82, December 12, 2013
===============================

  o lemma functions
  o polymorphic recursion permitted
  o opaque types