@@ -844,6 +844,10 @@ This command produces a summary of the proof session in HTML syntax.
 There are three styles of output: `table', `simpletree', and
 `jstree'. The default is `table'.
 
+The file generated is named \texttt{why3session.html} and is written
+in the session directory by default (see option \texttt{-o} to
+override this default).
+
 \begin{figure}[t]
 %BEGIN LATEX
 \begin{center}
