@@ -78,7 +78,7 @@ let run_file (context : context) print_session fname =
   let basename = Filename.basename project_dir in
   let cout =
     if output_dir = "-" then stdout else
-      open_out (Filename.concat output_dir (basename^".html"))
+      open_out (Filename.concat output_dir ("why3session.html"))
   in
   let fmt = formatter_of_out_channel cout in
   if !opt_context
