@@ -1,6 +1,10 @@
 
 * marks an incompatible change
 
+tools
+  * file generated by "why3session html f.mlw" is now
+    "f/why3session.html" and not "f/f.html"
+
 library
   * renamed array.ArraySorted -> array.IntArraySorted
     array.ArraySorted is now generic, with type and order relation parameters
